--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,6 @@ tensorboard==2.10.1
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
 tensorflow==2.9.0
-tensorflow-estimator==2.7.0
+tensorflow-estimator==2.9.0rc0
 tensorflow-io-gcs-filesystem==0.26.0
 urllib3==1.26.9
