--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
---upgrade pip
 cloudinary==1.30.0
 Flask==2.2.2
 joblib==1.1.0
@@ -10,7 +9,7 @@ Pillow==9.0.1
 tensorboard==2.10.1
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
-tensorflow==2.9.0
-tensorflow-estimator==2.9.0rc0
+tensorflow==2.7.0
+tensorflow-estimator==2.7.0
 tensorflow-io-gcs-filesystem==0.26.0
 urllib3==1.26.9
