--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-cloudinary==1.30.0
-Flask==2.2.2
-joblib==1.1.0
-keras==2.6.0
-numpy==1.22.2
-Pillow==9.0.1
-tensorflow==2.7.0
-urllib3==1.26.9
+cloudinary
+Flask
+joblib
+keras
+numpy
+Pillow
+tensorflow
+urllib3
